# AttackMap

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  ANALYZER_METADATA_UNIFICATION.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CONTRACT_MIGRATION_NOTES.md  CONTRACT_UNIFICATION_PLAN.md  CONTRIBUTING.md  DUPLICATED_ANALYZER_LOGIC_PLAN.md  Dockerfile  HIGHER_LEVEL_ANALYSIS_FLOW.md  README.md  RECON_TO_ANALYSIS_DESIGN.md  REFACTOR_NOTES.md  RESULT_MODEL_MIGRATION.md  SCANNER_RESPONSIBILITY_REVIEW.md  SCANNER_SIMPLIFICATION_NOTES.md  TRANSLATION_LAYER_DECISION.md  VISION.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
.glab/: config.yml
docs/: external-analyzers.md
evals/fixtures/: bluesky-atproto-review-v1.json  laminas-omeka-review-v1.json  node-service-review-v1.json
evals/samples/: bluesky-atproto-bad-review.md  bluesky-atproto-good-review.md  laminas-omeka-good-review.md  node-service-good-review.md
evals/validation/bluesky/: FINDINGS.md  atproto-findings.md  pds-findings.md  social-app-findings.md
examples/: README.md
examples/flask-admin-demo/: README.md  app.py
examples/orders-api-demo/: README.md  app.py
examples/vulnerable-demo-app/: app.py
examples/webhook-billing-demo/: README.md  app.py
old_docs/: ANALYZER_METADATA_UNIFICATION.md  ARCHITECTURE_SUMMARY.md  CONTRACT_MIGRATION_NOTES.md  HIGHER_LEVEL_ANALYSIS_FLOW.md  INCREMENTAL_REFACTOR_PLAN.md  RECON_TRANSLATION_CONSOLIDATION.md  REFACTOR_NOTES.md  RESULT_MODEL_MIGRATION.md  SCANNER_RESPONSIBILITY_REVIEW.md  SCANNER_SIMPLIFICATION_NOTES.md  TRANSLATION_LAYER_DECISION.md  UPDATED_ANALYZER_METADATA.md
schemas/: defensive-review.schema.json  review-context-pack.schema.json
src/attackmap/: analyzer.py  analyzer_contracts.py  analyzers.py  asset_model.py  attack_taxonomy.py  cli.py  context_pack.py  control_model.py  defensive_review.py  detection_opportunities.py  graph.py  insights.py  llm_review.py  merge.py  models.py  recon_models.py  recon_to_analysis.py  report.py  review_eval.py  review_json.py  review_prompts.py  scanner.py  security_overlay.py  threat_model.py
src/attackmap/sdk/: __init__.py  contracts.py  models.py
tests/: test_analyzer.py  test_analyzers.py  test_artifact_schemas.py  test_context_pack.py  test_defensive_review.py  test_graph.py  test_llm_review.py  test_merge.py  test_recon_to_analysis.py  test_report.py  test_review_eval.py  test_review_json.py  test_review_prompts.py  test_scanner.py  test_security_overlay.py  test_shared_contract_imports.py  test_signal_v2.py  test_threat_intel.py  test_threat_model.py
