[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attackmap"
version = "0.1.0"
description = "Analyze a codebase, infer architecture, and map likely attack paths."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AttackMap Contributors"}
]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "networkx>=3.3",
]

[project.scripts]
attackmap = "attackmap.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
